--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+
+      - name: Discover and Test All Projects
+        run: |
+          for dir in $(find . -maxdepth 1 -type d -name "num*"); do
+            echo "Processing $dir"
+            (cd $dir && cargo build --verbose && cargo test --verbose)
+          done
