--- a/num2_echor/Cargo.toml
+++ b/num2_echor/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "^4.5.36", features = ["derive"] }
+
+[dev-dependencies]
+assert_cmd = "^2.0.16"
+predicates = "^3.1.3"
