--- a/num5_wcr/Cargo.toml
+++ b/num5_wcr/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.36", features = ["derive"] }
+
+[dev-dependencies]
+anyhow = "1.0.98"
+assert_cmd = "2.0.17"
+predicates = "3.1.3"
+pretty_assertions = "1.4.1"
+rand = "0.9.1"
